# ferrimock

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  OPTIMIZATION_RESEARCH_PROMPT.md  README.md  _typos.toml  cliff.toml  package.json  rust-toolchain.toml  tsconfig.json
crates/ferrimock-napi/: Cargo.toml  index.d.ts  index.js  index.mjs  package.json
crates/ferrimock-napi/src/: config.rs  fake_ns.rs  graphql_ns.rs  handler_bridge.rs  http_ns.rs  lib.rs  request_context.rs  response_ns.rs  server.rs  sse_ns.rs  types.rs  ws_ns.rs
crates/ferrimock-napi/src/services/: consolidate.rs  convert.rs  create.rs  export.rs  fake_data.rs  fake_image.rs  fake_pdf.rs  format.rs  list.rs  mod.rs  serve.rs  show.rs  template.rs  test_match.rs  validate.rs
crates/ferrimock-napi/test/: benchmark.test.ts  load-mocks.test.ts  profile.test.ts  server.test.ts  services.test.ts
crates/ferrimock-napi/test/fixtures/: mocks.json  mocks.yaml
crates/mockpit/: Cargo.toml
crates/mockpit-api/: Cargo.toml
crates/mockpit-api/src/: bulk.rs  handlers.rs  inspector.rs  lib.rs  query.rs  reload.rs  state.rs  status.rs  store.rs  types.rs
crates/mockpit-bin/: Cargo.toml
crates/mockpit-cli/: Cargo.toml
crates/mockpit-cli/npm-shim/: README.md  package.json
crates/mockpit-cli/npm-shim/scripts/: prepare.mjs
crates/mockpit-cli/src/: config.rs  consolidate.rs  convert.rs  create.rs  dispatch.rs  export.rs  format.rs  lib.rs  list.rs  main.rs  recordings.rs  reload.rs  self_update.rs  serve.rs  show.rs  test.rs  ui.rs  validate.rs  wizard.rs
crates/mockpit-cli/src/commands/: consolidate.rs  convert.rs  create.rs  dispatch.rs  export.rs  format.rs  list.rs  mod.rs  recordings.rs  reload.rs  serve.rs  show.rs  test.rs  validate.rs  wizard.rs
crates/mockpit-cli/src/fake/: data.rs  generators.rs  image.rs  mod.rs  pdf.rs  preview.rs  server.rs
crates/mockpit-codegen/: Cargo.toml
crates/mockpit-codegen/src/: array_object.rs  field_converter.rs  file_detection.rs  generator.rs  helpers.rs  lib.rs  pagination.rs  types.rs
crates/mockpit-commands/: Cargo.toml
crates/mockpit-commands/src/: consolidate.rs  convert.rs  create.rs  dispatch.rs  export.rs  format.rs  recordings.rs  reload.rs  test.rs  wizard.rs
crates/mockpit-commands/src/fake/: data.rs  image.rs  pdf.rs  preview.rs  server.rs
crates/mockpit-config/: Cargo.toml
crates/mockpit-config/src/: har.rs  lib.rs  matcher.rs  parser.rs  patches.rs  patterns.rs  request_transform.rs  response.rs  template_formatter.rs
crates/mockpit-consolidator/: Cargo.toml
crates/mockpit-consolidator/src/: analysis.rs  lib.rs  pattern.rs  tests.rs
crates/mockpit-consolidator/tests/: consolidator_tests.rs
crates/mockpit-core/: Cargo.toml
crates/mockpit-core/src/: persistence.rs  utils.rs
crates/mockpit-engine/: Cargo.toml
crates/mockpit-engine/benches/: mock_performance.rs
crates/mockpit-engine/src/: har_export.rs  lib.rs  matcher.rs  patcher.rs  recorder_ext.rs  registry.rs  request_patcher.rs  scope.rs  types.rs  validation.rs
crates/mockpit-engine/tests/: call_tracking.rs  concurrency_stress_test.rs  config_tests.rs  example_validation_tests.rs  har_loader_tests.rs  lib.rs  matcher_tests.rs  recorder_tests.rs  template_tests.rs  validation_tests.rs
crates/mockpit-engine/tests/core/: config_loading.rs  mod.rs  request_matching.rs  response_generation.rs
crates/mockpit-engine/tests/integration/: api_features.rs  graphql_e2e.rs  scope_isolation.rs
crates/mockpit-fake-data/: Cargo.toml
crates/mockpit-fake-data/src/: company.rs  contact.rs  datetime.rs  files.rs  finance.rs  identifiers.rs  identity.rs  internet.rs  lib.rs  location.rs  text.rs  web.rs
crates/mockpit-graphql/: Cargo.toml
crates/mockpit-graphql/examples/: test_username_graphql.rs
crates/mockpit-graphql/src/: generator.rs  lib.rs  type_mapper.rs
crates/mockpit-graphql/src/introspection/: mod.rs  parser.rs  query.rs  sdl.rs  types.rs
crates/mockpit-napi/: Cargo.toml  index.d.ts  index.js  index.mjs  package.json
crates/mockpit-napi/src/: config.rs  fake_ns.rs  graphql_ns.rs  handler_bridge.rs  http_ns.rs  lib.rs  request_context.rs  response_ns.rs  server.rs  sse_ns.rs  types.rs  ws_ns.rs
crates/mockpit-napi/src/services/: consolidate.rs  convert.rs  create.rs  export.rs  fake_data.rs  fake_image.rs  fake_pdf.rs  format.rs  list.rs  mod.rs  serve.rs  show.rs  template.rs  test_match.rs  validate.rs
crates/mockpit-napi/test/: benchmark.test.ts  load-mocks.test.ts  profile.test.ts  server.test.ts
crates/mockpit-napi/test/fixtures/: recording.har
crates/mockpit-recorder/: Cargo.toml
crates/mockpit-recorder/src/: filters.rs  formats.rs  har.rs  lib.rs  recorder.rs  session.rs  types.rs
crates/mockpit-server/: Cargo.toml
crates/mockpit-server/src/: debouncer.rs  file_watcher.rs  hot_reload.rs  lib.rs  state.rs
crates/mockpit-template/: Cargo.toml
crates/mockpit-template/benches/: template_performance.rs
crates/mockpit-template/src/: engine.rs  error.rs  fake_data.rs  filters.rs  functions.rs  graphql_helpers.rs  lib.rs  renderer.rs  store.rs
crates/mockpit-type-detector/: Cargo.toml
crates/mockpit-type-detector/benches/: type_detection.rs
crates/mockpit-type-detector/src/: analyzers.rs  checkers.rs  constants.rs  features.rs  lib.rs  semantic.rs  tests.rs  types.rs
crates/mockpit-types/: Cargo.toml
crates/mockpit-types/src/: lib.rs
crates/mockpit/benches/: mock_performance.rs  script_performance.rs  template_performance.rs  type_detection.rs
crates/mockpit/examples/: test_username_graphql.rs
crates/mockpit/src/: error.rs  handler.rs  lib.rs  streaming.rs
crates/mockpit/src/api/: bulk.rs  handlers.rs  inspector.rs  mod.rs  query.rs  reload.rs  status.rs  store.rs  types.rs
crates/mockpit/src/codegen/: array_object.rs  field_converter.rs  (+5 more)
crates/mockpit/tests/: call_tracking.rs  concurrency_stress_test.rs  config_tests.rs  consolidator_tests.rs  example_validation_tests.rs  har_loader_tests.rs  lib.rs  matcher_tests.rs  recorder_tests.rs  scripting_tests.rs  sse_tests.rs  template_tests.rs  validation_tests.rs  ws_tests.rs
(+303 files in other folders)
