[package]
name = "mockpit-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Mock management HTTP API: CRUD, bulk operations, inspection, recording, and persistence store endpoints"

[dependencies]
mockpit-config = { path = "../mockpit-config" }
mockpit-consolidator = { path = "../mockpit-consolidator" }
mockpit-engine = { path = "../mockpit-engine" }
mockpit-recorder = { path = "../mockpit-recorder" }
mockpit-server = { path = "../mockpit-server" }

axum = { workspace = true }
chrono = { workspace = true }
lean_string = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
