[package]
name = "mockpit-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Mock management HTTP API: CRUD, bulk operations, inspection, recording, and persistence store endpoints"

[dependencies]
mockpit-config = { version = "0.1.0", path = "../mockpit-config" }
mockpit-consolidator = { version = "0.1.0", path = "../mockpit-consolidator" }
mockpit-engine = { version = "0.1.0", path = "../mockpit-engine" }
mockpit-recorder = { version = "0.1.0", path = "../mockpit-recorder" }
mockpit-server = { version = "0.1.0", path = "../mockpit-server" }

axum = { workspace = true }
chrono = { workspace = true }
lean_string = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
