[package]
name = "mockpit-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Mock management CLI commands: create, list, test, serve, validate, and convert mocks"

[dependencies]
mockpit-config = { path = "../mockpit-config" }
mockpit-consolidator = { path = "../mockpit-consolidator" }
mockpit-engine = { path = "../mockpit-engine" }
mockpit-fake-data = { path = "../mockpit-fake-data" }
mockpit-template = { path = "../mockpit-template" }
mockpit-types = { path = "../mockpit-types" }
mockpit-server = { path = "../mockpit-server" }

anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
comfy-table = { workspace = true }
dialoguer = { workspace = true }
har = { workspace = true }
indicatif = { workspace = true }
lean_string = { workspace = true }
open = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
