[package]
name = "mockpit-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Mockpit CLI - HTTP mocking tool with templates, recording, consolidation, and GraphQL support"

[[bin]]
name = "mockpit"
path = "src/main.rs"

[dependencies]
mockpit-commands = { path = "../mockpit-commands" }
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = "0.2"
colored = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
