[package]
name = "mockpit-commands"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Mock and fake data command implementations for the mockpit CLI"

[dependencies]
mockpit-config = { version = "0.1.1", path = "../mockpit-config" }
mockpit-consolidator = { version = "0.1.1", path = "../mockpit-consolidator" }
mockpit-engine = { version = "0.1.1", path = "../mockpit-engine" }
mockpit-fake-data = { version = "0.1.1", path = "../mockpit-fake-data" }
mockpit-template = { version = "0.1.1", path = "../mockpit-template" }
mockpit-types = { version = "0.1.1", path = "../mockpit-types" }
mockpit-server = { version = "0.1.1", path = "../mockpit-server" }

anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
comfy-table = { workspace = true }
dialoguer = { workspace = true }
har = { workspace = true }
indicatif = { workspace = true }
lean_string = { workspace = true }
open = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
