[package]
name = "mockpit-config"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Mock configuration parsing and HAR file loading"

[features]
schema = ["schemars"]

[dependencies]
schemars = { version = "1", optional = true }
mockpit-types = { version = "0.1.0", path = "../mockpit-types" }
tokio = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
bytes = { workspace = true }
json-patch = { workspace = true }
lean_string = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
anyhow = { workspace = true }
har = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
