[package]
name = "mockpit-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core utilities for the mockpit mocking framework"

[dependencies]
dashmap = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
