[package]
name = "mockpit-engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP mocking engine with templates, scripting, and intelligent consolidation"
categories = ["development-tools", "web-programming"]
keywords = ["mock", "http", "testing", "templates", "fake-data"]

[dependencies]
mockpit-core = { version = "0.1.0", path = "../mockpit-core" }
mockpit-config = { version = "0.1.0", path = "../mockpit-config" }
mockpit-consolidator = { version = "0.1.0", path = "../mockpit-consolidator" }
mockpit-recorder = { version = "0.1.0", path = "../mockpit-recorder" }
mockpit-template = { version = "0.1.0", path = "../mockpit-template" }
mockpit-types = { version = "0.1.0", path = "../mockpit-types" }
lean_string = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
nohash-hasher = { workspace = true }
parking_lot = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
flate2 = { workspace = true }
har = { workspace = true }
sha2 = { workspace = true }
json-patch = { workspace = true }
urlencoding = { workspace = true }
lru = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio", "html_reports"] }
futures = { workspace = true }
smallvec = { workspace = true }
tempfile = { workspace = true }
tera = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
uuid = { workspace = true }

[[bench]]
name = "mock_performance"
harness = false

[lints]
workspace = true
