[package]
name = "mockpit-fake-data"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Fake data generators for realistic mock responses"

[dependencies]
fake = { workspace = true }
rand = { workspace = true }
rust-embed = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
ab_glyph = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
lopdf = { workspace = true }

[lints]
workspace = true
