[package]
name = "mockpit-napi"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Node.js NAPI bindings for the Mockpit HTTP mocking engine"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI bindings (pinned, not workspace — independent versioning)
napi = { version = "3", default-features = false, features = ["napi9", "tokio_rt", "async", "serde-json"] }
napi-derive = { version = "3", default-features = false, features = ["type-def"] }

# Core mockpit library. Everything except `scripting`: under Node the JS
# mock files run on V8 via @mockpit/core's loader — embedding QuickJS in
# the addon would double-load them on a slower engine.
mockpit = { path = "../mockpit", features = ["engine", "graphql", "server", "api", "schema"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde_json = { workspace = true }

# HTTP types
http = { workspace = true }

# Web framework (for the embedded mock server)
axum = { workspace = true }

# Utilities
bytes = { workspace = true }
urlencoding = { workspace = true }
anyhow = { workspace = true }
rustc-hash = { workspace = true }
regex = { workspace = true }
smallvec = { workspace = true }

[build-dependencies]
napi-build = "2"

# Inherit workspace lints but allow napi-specific patterns
[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
# napi-derive generates code that triggers these
needless_pass_by_value = "allow"
unnecessary_wraps = "allow"
unused_async = "allow"
redundant_closure = "allow"
cast_possible_truncation = "allow"
cast_lossless = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
