[package]
name = "mockpit-recorder"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP request/response recording for mock generation"
categories = ["development-tools", "web-programming"]
keywords = ["mock", "http", "recording", "har"]

[dependencies]
mockpit-config = { path = "../mockpit-config" }
tokio = { workspace = true, features = ["fs", "io-util", "sync"] }
bytes = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
har = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
uuid = { workspace = true }
flate2 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
