[package]
name = "mockpit-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Server utilities for mockpit: hot reload, graceful shutdown, and state management"

[dependencies]
mockpit-config = { version = "0.1.1", path = "../mockpit-config" }
mockpit-engine = { version = "0.1.1", path = "../mockpit-engine" }
mockpit-consolidator = { version = "0.1.1", path = "../mockpit-consolidator" }
mockpit-recorder = { version = "0.1.1", path = "../mockpit-recorder" }
mockpit-types = { version = "0.1.1", path = "../mockpit-types" }

anyhow = { workspace = true }
axum = { workspace = true }
notify = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
