[package]
name = "mockpit-template"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Template rendering engine for HTTP mock responses with fake data generation"

[dependencies]
mockpit-core = { version = "0.1.1", path = "../mockpit-core" }
mockpit-fake-data = { version = "0.1.1", path = "../mockpit-fake-data" }
mockpit-types = { version = "0.1.1", path = "../mockpit-types" }
tera = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lru = { workspace = true }
nohash-hasher = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
rustc-hash = { workspace = true }

[[bench]]
name = "template_performance"
harness = false

[lints]
workspace = true
