[package]
name = "mockpit-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types for HTTP mock matching, patterns, and response generation"

[dependencies]
bytes = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
urlencoding = { workspace = true }
json-patch = { workspace = true }
lean_string = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
