[package]
name = "mockpit"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A high-performance HTTP mocking engine with templates, recording, consolidation, and GraphQL support"
keywords = ["mock", "http", "testing", "api", "fake-data"]
categories = ["development-tools", "web-programming"]

[features]
default = ["engine", "fake-data"]

# Core mock engine (types + config + matching + registry + templates)
engine = [
  "dep:mockpit-types",
  "dep:mockpit-config",
  "dep:mockpit-recorder",
  "dep:mockpit-template",
  "dep:mockpit-consolidator",
  "dep:mockpit-engine",
  "dep:mockpit-core",
]

# Fake data generators
fake-data = ["dep:mockpit-fake-data"]

# Semantic type detection from field names and values
type-detector = ["dep:mockpit-type-detector"]

# Template code generation from detected types
codegen = ["type-detector", "dep:mockpit-codegen"]

# GraphQL schema introspection and mock generation
graphql = ["engine", "codegen", "dep:mockpit-graphql"]

# HTTP server with hot reload and graceful shutdown
server = ["engine", "dep:mockpit-server"]

# Mock management HTTP API (axum router)
api = ["server", "dep:mockpit-api"]

# Mock and fake data command implementations
commands = ["server", "dep:mockpit-commands"]

# Config schema generation (for editor extensions)
schema = ["engine", "mockpit-config/schema"]

# Everything
full = ["engine", "fake-data", "type-detector", "codegen", "graphql", "server", "api", "commands", "schema"]

[dependencies]
mockpit-core = { version = "0.1.1", path = "../mockpit-core", optional = true }
mockpit-types = { version = "0.1.1", path = "../mockpit-types", optional = true }
mockpit-config = { version = "0.1.1", path = "../mockpit-config", optional = true }
mockpit-recorder = { version = "0.1.1", path = "../mockpit-recorder", optional = true }
mockpit-codegen = { version = "0.1.1", path = "../mockpit-codegen", optional = true }
mockpit-template = { version = "0.1.1", path = "../mockpit-template", optional = true }
mockpit-consolidator = { version = "0.1.1", path = "../mockpit-consolidator", optional = true }
mockpit-engine = { version = "0.1.1", path = "../mockpit-engine", optional = true }
mockpit-graphql = { version = "0.1.1", path = "../mockpit-graphql", optional = true }
mockpit-type-detector = { version = "0.1.1", path = "../mockpit-type-detector", optional = true }
mockpit-fake-data = { version = "0.1.1", path = "../mockpit-fake-data", optional = true }
mockpit-server = { version = "0.1.1", path = "../mockpit-server", optional = true }
mockpit-api = { version = "0.1.1", path = "../mockpit-api", optional = true }
mockpit-commands = { version = "0.1.1", path = "../mockpit-commands", optional = true }

[lints]
workspace = true
