[package]
name = "mockpit"
version = "0.1.5"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A high-performance HTTP mocking engine with templates, recording, consolidation, and GraphQL support"
readme = "../../README.md"
keywords = ["mock", "http", "testing", "api", "fake-data"]
categories = ["development-tools", "web-programming"]

[features]
default = ["engine"]

# Core mock engine (types + config + matching + registry + templates + consolidator)
# Includes fake-data (template needs it), type-detector and codegen (consolidator needs them)
engine = [
  "fake-data",
  "type-detector",
  "codegen",
]

# Fake data generators (images, PDFs, identity, etc.)
fake-data = [
  "dep:fake",
  "dep:rand",
  "dep:rust-embed",
  "dep:ab_glyph",
  "dep:image",
  "dep:imageproc",
  "dep:lopdf",
]

# Semantic type detection from field names and values
type-detector = []

# Template code generation from detected types
codegen = ["type-detector"]

# GraphQL schema introspection and mock generation
graphql = ["engine", "dep:graphql-parser"]

# HTTP server with hot reload and graceful shutdown
server = ["engine", "dep:axum", "dep:tower-http", "dep:notify"]

# Mock management HTTP API (axum router)
api = ["server"]

# Config schema generation (for editor extensions)
schema = ["dep:schemars"]

# Everything
full = ["engine", "graphql", "server", "api", "schema"]

[dependencies]
# ---- Always required (engine feature) ----
# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Error handling and logging
thiserror = { workspace = true }
tracing = { workspace = true }

# Utilities
bytes = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
flate2 = { workspace = true }
globset = { workspace = true }
har = { workspace = true }
json-patch = { workspace = true }
lazy_static = { workspace = true }
lean_string = { workspace = true }
lru = { workspace = true }
nohash-hasher = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
sha2 = { workspace = true }
smallvec = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }

# HTTP
http = { workspace = true }

# Template engine
tera = { workspace = true }

# ---- Optional dependencies (feature-gated) ----

# Fake data (fake-data feature)
fake = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
rust-embed = { workspace = true, optional = true }
ab_glyph = { workspace = true, optional = true }
image = { workspace = true, optional = true }
imageproc = { workspace = true, optional = true }
lopdf = { workspace = true, optional = true }

# GraphQL (graphql feature)
graphql-parser = { workspace = true, optional = true }

# Server (server feature)
axum = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
notify = { workspace = true, optional = true }

# Schema (schema feature)
schemars = { version = "1", optional = true }

[dev-dependencies]
anyhow = { workspace = true }
criterion = { workspace = true, features = ["html_reports", "async_tokio"] }
futures = { workspace = true }
smallvec = { workspace = true }
tempfile = { workspace = true }
serial_test = { workspace = true }
tera = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
uuid = { workspace = true }

[[bench]]
name = "mock_performance"
harness = false

[[bench]]
name = "template_performance"
harness = false

[[bench]]
name = "type_detection"
harness = false

[lints]
workspace = true
